PortalPackage/ Enrollment Rx Core/objects/Enrollment_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Non_US_Country_of_Citizenship__c</fullName>
        <description>ERx Custom Field</description>
        <label>Non US Country of Citizenship?</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas, The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_1__c</fullName>
        <description>ERx Custom Field</description>
        <label>Parent 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_2__c</fullName>
        <description>ERx Custom Field</description>
        <label>Parent 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Barrier__c</fullName>
        <description>ERx Custom Field</description>
        <label>Primary Barrier</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Mailing_Address__c</fullName>
        <formula>Applicant__r.MailingStreet &amp; &quot; &quot; &amp; Applicant__r.MailingCity &amp; &quot;, &quot; &amp; Applicant__r.MailingState</formula>
        <label>Primary Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone_Number__c</fullName>
        <formula>Applicant__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program of Interest</label>
        <referenceTo>Program_Offered__c</referenceTo>
        <relationshipName>Enrollment_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAT_Date_Test_Taken__c</fullName>
        <description>ERx Custom Field</description>
        <label>SAT Date Test Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAT_Math_Score__c</fullName>
        <description>ERx Custom Field</description>
        <label>SAT Math Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAT_Verbal_Score__c</fullName>
        <description>ERx Custom Field</description>
        <label>SAT Verbal Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Rating__c</fullName>
        <formula>IF( Total_SAT_Score__c &gt;1000, &quot;High&quot;,&quot;Low&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scored_Goal_10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field used to track if this enrollment opportunity has already given credit to the advisor for Goal 10 as defined in the Enrollment Rx Configuration object.</description>
        <inlineHelpText>A hidden field used to track if this enrollment opportunity has already given credit to the advisor for Goal 10 as defined in the Enrollment Rx Configuration object.</inlineHelpText>
        <label>Scored Goal 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scored_Goal_11__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field used to track if this enrollment opportunity has already given credit to the advisor for Goal 11 as defined in the Enrollment Rx Configuration object.</description>
        <inlineHelpText>A hidden field used to track if this enrollment opportunity has already given credit to the advisor for Goal 11 as defined in the Enrollment Rx Configuration object.</inlineHelpText>
        <label>Scored Goal 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scored_Goal_12__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field used to track if this enrollment opportunity has already given credit to the advisor for Goal 12 as defined in the Enrollment Rx Configuration object.</description>
        <inlineHelpText>A hidden field used to track if this enrollment opportunity has already given credit to the advisor for Goal 12 as defined in the Enrollment Rx Configuration object.</inlineHelpText>
        <label>Scored Goal 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Application_Fee__c</fullName>
        <label>Secondary Application Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status_Modified_Date__c</fullName>
        <label>Status Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE(
CASE(  Admissions_Status__c  ,
&quot;New&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Attempted Contact&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Contact Complete&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Interview Complete&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Application Complete&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Closed (File Closed)&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOEFL_Score__c</fullName>
        <description>ERx Custom Field</description>
        <label>TOEFL Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Intended_to_Start_Formula__c</fullName>
        <description>The read-only field for the target term for this applicant. This field cannot be changed; you must open a new enrollment opportunity by changing the Contact&apos;s start term.</description>
        <formula>Term_Intended_to_Start__r.Name</formula>
        <inlineHelpText>The read-only field for the target term for this applicant. This field cannot be changed; you must open a new enrollment opportunity by changing the Contact&apos;s start term.</inlineHelpText>
        <label>Term Intended to Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Intended_to_Start__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx custom field</description>
        <label>Term Intended to Start</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipName>R00N80000002jwoaEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_SAT_Score__c</fullName>
        <formula>SAT_Math_Score__c  +  SAT_Verbal_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total SAT Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuition_Planning_Confidence_Level__c</fullName>
        <description>ERx Custom field</description>
        <label>Tuition Planning Confidence Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <description>ERx Custom Field</description>
        <label>Visa Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Admissions_Status__c</columns>
        <columns>Term_Intended_to_Start__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Applications</label>
    </listViews>
    <listViews>
        <fullName>Interview_Complete</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Contact_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Admissions_Status__c</field>
            <operation>contains</operation>
            <value>Interview Complete</value>
        </filters>
        <label>Interview Complete</label>
    </listViews>
    <listViews>
        <fullName>MA_Application_Complete</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Admissions_Status__c</field>
            <operation>contains</operation>
            <value>Application Complete</value>
        </filters>
        <filters>
            <field>Primary_Mailing_Address__c</field>
            <operation>contains</operation>
            <value>MA</value>
        </filters>
        <label>MA - Application Complete</label>
    </listViews>
    <nameField>
        <displayFormat>App ID-{0000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>